scrollbars are visible in the editor - fixed #375

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -1,12 +1,16 @@
 #editorArea {
-    margin-top: 1rem;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #editor {
     width: 100%;
-    height: 50%;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-basis: 70%;
+    height: 70%;
 }
 
 monaco-editor.no-user-select.showUnused.showDeprecated.vs {
